<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyTheme"
    tools:context=".CalculatorFragment"
    >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editNumbersField"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|end"
        android:inputType="numberDecimal"
        android:scrollbars="vertical"
        android:text="@string/hello_blank_fragment"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputtedData" />

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="42:50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/mod"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/mod"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/power"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/power"
            style="@style/ButtonCalculateStyle"
             />

        <Button
            android:id="@+id/clearAll"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/clearAll"
            style="@style/ButtonCalculateStyle"
            />

        <ImageButton
            android:id="@+id/clear"
            android:layout_row="0"
            android:layout_column="3"
            android:src="?attr/actionModeCloseDrawable"
            android:text="@string/clear"
            android:contentDescription="@string/clear"
            style="@style/ButtonCalculateStyle.ImageButtonStyle" />

        <Button
            android:id="@+id/button7"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/button7"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button8"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/button8"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button9"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/button9"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/increase"
            android:layout_row="1"
            android:layout_column="3"
            android:text="*"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button4"
            android:layout_row="2"
            android:layout_column="0"
            android:text="4"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button5"
            android:layout_row="2"
            android:layout_column="1"
            android:text="5"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_row="2"
            android:layout_column="2"
            android:text="6"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/separate"
            android:layout_row="2"
            android:layout_column="3"
            android:text="/"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button1"
            android:layout_row="3"
            android:layout_column="0"
            android:text="1"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_row="3"
            android:layout_column="1"
            android:text="2"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_row="3"
            android:layout_column="2"
            android:text="3"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/sum"
            android:layout_row="3"
            android:layout_column="3"
            android:text="+"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/point"
            android:layout_row="4"
            android:layout_column="0"
            android:text="."
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/button0"
            android:layout_row="4"
            android:layout_column="1"
            android:text="0"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/difference"
            android:layout_row="4"
            android:layout_column="2"
            android:text="-"
            style="@style/ButtonCalculateStyle" />

        <Button
            android:id="@+id/is"
            android:layout_row="4"
            android:layout_column="3"
            android:text="="
            style="@style/ButtonCalculateStyle" />

    </GridLayout>

    <TextView
        android:id="@+id/textInputtedData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text=""
        android:textColor="#888383"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>